--- a/planningmaterials.html
+++ b/planningmaterials.html
@@ -94,7 +94,7 @@
             <p>Here are an couple of reliable website which will educate you on medical inequity. This sources are written by some of the best health organizations and are an great step towards getting a deeper understanding of medical inequity.</p>
         </div>
         <div id="links">
-            <select id="linkBox" class="water">
+            <select id="linkBox" class="linkBoxbutton">
                 <option value="https://www.who.int/news-room/facts-in-pictures/detail/health-inequities-and-their-causes">World Health Organizations </option>
                 <option value="https://www.medicalnewstoday.com/articles/health-inequity">Medical News Today</option>
                 <option value="https://www.oecd.org/health/inequalities-in-health.htm">OECD Home Page for Medical Inequity Webpages</option>
@@ -115,8 +115,7 @@
             function gotoSite()
          {
             siteSelected = document.getElementById("linkBox").value;
-            window.open(siteSelected);   //opens in a new tab
-            //window.location = siteSelected;    //opens in current tab
+            window.open(siteSelected); 
          }
         </script>           
     </body>
