--- a/planningmaterials.html
+++ b/planningmaterials.html
@@ -83,7 +83,7 @@
         <div id="introText">Frequently Asked Questions</div>
             <div id="FAQ">
 
-                <p>What is the defintion of medical inequity? <button id="firstAnswer" onclick=showAnswer1();><i class="fa fa-fw fa-sort-desc"></i></button></p> 
+                <p>What is the definition of medical inequity? <button id="firstAnswer" onclick=showAnswer1();><i class="fa fa-fw fa-sort-desc"></i></button></p> 
                 <div id="firstAnswerresponse"></div>
                 <p>Where can I learn more about medical inequity? <button id="secondAnswer" onclick=showAnswer2();><i class="fa fa-fw fa-sort-desc"></i></button></p> 
                 <div id="secondAnswerresponse"></div>
